<resources>
    <string name="app_name">Logica App</string>
    <string name="a_b">A ^ B</string>
    <string name="b">B</string>
    <string name="a">A</string>
    <string name="value_false">F</string>
    <string name="value_true">T</string>
    <string name="activity_title">Conjunction (And)</string>
    <string name="submit">Submit</string>
    <string name="result_message">The correct number of answers is: %1$d</string>
    <string name="possibleValues">TF</string>
</resources>
